mcp/github-mcp-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-mcp-server
  namespace: mcp
  labels:
    app.kubernetes.io/name: github-mcp-server  
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
    appProtocol: kgateway.dev/mcp
  selector:
    app.kubernetes.io/instance: github-mcp-server
    app.kubernetes.io/name: github-mcp-server
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-mcp-server
  namespace: mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: github-mcp-server
      app.kubernetes.io/name: github-mcp-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: github-mcp-server
        app.kubernetes.io/name: github-mcp-server
    spec:
      containers:
      - args:
        - -f
        - /config/local.yaml
        command:
        - /adapterbin/agentgateway
        image: ghcr.io/github/github-mcp-server
        imagePullPolicy: IfNotPresent
        name: mcp-server
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /adapterbin
          name: binary
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: github-mcp-server
      serviceAccountName: github-mcp-server
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: github-mcp-server
        name: config
      - emptyDir: {}
        name: binary
